[package]
name = "dirbackup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = { version = "6.1.1", features = ["serde"] }
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.215" ,features = ["derive"]}
serde_json = "1.0.133"
toml = "0.8.19"
