[package]
name = "fileDRust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
log = "0.4.27"
log4rs = "1.3.0"
sha2 = "0.10.9"
walkdir = "2.5.0"
notify = { version = "6.1.1", features = ["serde"] }
serde = { version = "1.0.215" ,features = ["derive"]}
serde_json = "1.0.133"
toml = "0.8.19"
interprocess = { version = "2.2.2", features = ["tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
ctrlc = "3.4.7"
ssh2 = "0.9.5"
futures = { version = "0.3.31", features = ["thread-pool"] }
threadpool = "1.8.1"
